# ansible-globus

./: .ansible-lint  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  TESTING_GUIDE.md  ansible.cfg  cliff.toml  conftest.py  galaxy.yml  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: ci.yml  refresh-tokens.yml  release.yml
docs/: .gitignore  AUTH_CLIENT_IMPLEMENTATION.md  TROUBLESHOOTING.md  build.sh  conf.py  index.rst  requirements.txt
docs/examples/: complete_gcs_deployment.yml  multi_site_research.yml
docs/getting-started/: authentication.rst  concepts.rst  first-playbook.rst  index.rst
examples/: INTEGRATION_TESTING.md  auth_client_test.yml  globus_flows.yml  globus_group.yml  globus_search.yml  group_vars_integration_example.yml  integration_with_traditional_gcs.yml  requirements.yml
infra/: Makefile  README.md  requirements.yml  setup-gcs-endpoint.yml  setup-token-storage.yml
infra/templates/: bucket-policy.json.j2  github-trust-policy.json.j2  s3-access-policy.json.j2
meta/: runtime.yml
plugins/doc_fragments/: globus_auth.py
plugins/module_utils/: globus_api.py  globus_auth.py  globus_common.py  globus_sdk_client.py  globus_sdk_compat.py
plugins/modules/: globus_auth.py  globus_collection.py  globus_compute.py  globus_endpoint.py  globus_flow.py  globus_flows.py  globus_gcs.py  globus_group.py  globus_search.py  globus_timer.py
scripts/: create_cli_storage_db.py  prepare_release.py  refresh_ci_tokens.py  release.py  run-integration-tests.sh  setup_oauth_tokens.py  test-integration-local.sh
tests/: conftest.py  s3_token_storage.py
tests/e2e/: README.md  cleanup_test_resources.py  test_e2e_full_deployment.py
tests/integration/: conftest.py  test_gcs_modules.py  test_group_module.py  test_integration.py  test_search_module.py
tests/unit/: test_globus_auth.py  test_globus_common.py  test_globus_flows.py  test_globus_sdk_client.py  test_globus_sdk_compat.py  test_globus_search.py
